# swagger.json
@@ -27,7 +27,9 @@
     },
     "/register": {
       "post": {
-        "tags": [],
+        "tags": [
+          "Authorization"
+        ],
         "description": "",
         "parameters": [
           {
@@ -70,7 +72,9 @@
     },
     "/login": {
       "post": {
-        "tags": [],
+        "tags": [
+          "Authorization"
+        ],
         "description": "",
         "parameters": [],
         "responses": {}
@@ -86,7 +90,9 @@
     },
     "/\r/auth/google/callback": {
       "get": {
-        "tags": [],
+        "tags": [
+          "Authorization"
+        ],
         "description": "",
         "parameters": [],
         "responses": {}
@@ -94,7 +100,9 @@
     },
     "/profile": {
       "get": {
-        "tags": [],
+        "tags": [
+          "Authorization"
+        ],
         "description": "",
         "parameters": [],
         "responses": {
@@ -106,7 +114,9 @@
     },
     "/logout": {
       "post": {
-        "tags": [],
+        "tags": [
+          "Authorization"
+        ],
         "description": "",
         "parameters": [],
         "responses": {}
